--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* HEADER STYLES */
+
+header {
+  background: rgba(0, 0, 0, 0.8);
+}
+
+nav {
+  width: 100%;
+}
+nav a {
+  color: white;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+}
+
+.shop-online {
+  background-color: #fbfbfd;
+}
