--- a/style.css
+++ b/style.css
@@ -2,12 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* HEADER STYLES */
 
 header {
   background: rgba(0, 0, 0, 0.8);
+}
+a {
+  text-decoration: none;
 }
 
 nav {
@@ -24,6 +28,43 @@ nav ul {
   list-style: none;
 }
 
-.shop-online {
+.shop-div {
   background-color: #fbfbfd;
+}
+
+.shop-online {
+  padding: 20px 0;
+  text-align: center;
+  width: 610px;
+  margin: auto;
+}
+.full-width-section {
+  width: 100%;
+  height: 650px;
+  padding-top: 40px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.full-width-section a {
+  color: blue;
+}
+
+.full-width-section div {
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.iphone-13-pro {
+  background-image: url("https://www.apple.com/v/home/aj/images/heroes/iphone-13-pro/hero_iphone_13pro__dhnsegysa42u_medium.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.iphone-13 {
+  background-image: url("https://www.apple.com/v/home/aj/images/heroes/iphone-13/hero_iphone_13__f194u1rdooeq_medium.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
