--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ nav {
   width: 100%;
 }
 nav a {
-  color: white;
+  color: #f5f5f7;
+  font-size: 12px;
 }
 
 nav ul {
@@ -35,6 +36,23 @@ nav ul {
   height: 44px;
   background-repeat: no-repeat;
   background-image: url("https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_search_image__cbllq1gkias2_large.svg");
+}
+.bag-icon {
+  background-size: 13px 44px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url("https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_bag_image__yzte50i47ciu_large.svg");
+  width: 13px;
+  height: 44px;
+}
+
+.apple-icon {
+  background-size: 14px 44px;
+  background-repeat: no-repeat;
+  background-image: url("https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_apple_image__b5er5ngrzxqq_large.svg");
+  background-position: center center;
+  width: 14px;
+  height: 44px;
 }
 
 .shop-online {
@@ -95,18 +113,20 @@ nav ul {
 .multi {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .multi article {
   height: 528px;
-  width: 45%;
+  width: 48%;
   margin-bottom: 20px;
   background-position: center;
   background-size: cover;
 }
 .watch {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-series-7/tile_watch__e9n11b6m6yq2_medium.jpg");
+  text-align: center;
 }
 .shot {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/shot-on-iphone/tile_soip__f0c6lef982em_medium.jpg");
