--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ main {
   margin-bottom: 20px;
   background-position: center;
   background-size: cover;
+  text-align: center;
 }
 .watch {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-series-7/tile_watch__e9n11b6m6yq2_medium.jpg");
@@ -142,21 +143,125 @@ main {
   color: #bf4800;
   font-size: 12px;
 }
+.watch-content {
+  margin-top: 20px;
+}
+.watch-content h5 {
+  margin-top: 11px;
+  font-size: 19px;
+  font-weight: 400;
+}
+.watch-links {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.watch-links a:first-child {
+  margin-right: 20px;
+}
 .shot {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/shot-on-iphone/tile_soip__f0c6lef982em_medium.jpg");
+}
+.shot-content {
+  margin-top: 30px;
+}
+.shot-content h4 {
+  font-size: 32px;
+}
+.shot-content h5 {
+  font-size: 19px;
+  font-weight: 400;
+  margin-bottom: 20px;
 }
 
 .heart {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-heart-month/promo_watch_heart__dlf8uc5h0kae_medium.jpg");
 }
+.heart span {
+  color: #bf4800;
+  font-size: 12px;
+}
+.heart-content {
+  margin-top: 20px;
+}
+.heart-content h4 {
+  font-size: 32px;
+}
+.heart-content h5 {
+  font-size: 19px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
 .watch-black {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-black-unity/promo_watch__fo7j0tnywi2q_medium.jpg");
+  color: white;
+}
+.watch-black-content {
+  margin-top: 30px;
+}
+.watch-black-content h4 {
+  font-size: 32px;
+}
+.watch-black-content h5 {
+  font-size: 19px;
+  font-weight: 400;
+}
+.watch-black-links {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.watch-black-links a:first-child {
+  margin-right: 20px;
 }
 .apple-card {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/apple-card/tile__cauwwcyyn9hy_medium.jpg");
 }
+.apple-card-content {
+  margin-top: 30px;
+}
+.apple-card-content h5 {
+  font-size: 19px;
+  font-weight: 400;
+}
+.apple-logo {
+  margin-bottom: 10px;
+}
+.apple-card-links {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.apple-card-links a:first-child {
+  margin-right: 20px;
+}
 .tv {
   background-image: url("https://www.apple.com/v/home/aj/images/promos/tv-plus-the-sky-is-everywhere/promo_sky__fu99g2ymabiy_medium.jpg");
+}
+.tv-images {
+  margin-top: 30px;
+}
+.tv-images div:first-child {
+  margin-bottom: 10px;
+}
+footer {
+  background-color: #f5f5f7;
+  color: #6e6e73;
+  padding-top: 19px;
+}
+
+footer p {
+  width: 65%;
+  margin: auto;
+  text-align: left;
+  font-size: 13px;
+}
+
+footer hr {
+  color: lightgray;
+  text-align: center;
+  width: 65%;
+  margin: auto;
 }
 
 /*Media Queries*/
